# TSI

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CLEANUP_REPORT.md  CONNECTION_POOL_FIX.md  Cargo.toml  DATABASE_MIGRATION_SUMMARY.md  DOCKER_QUICKSTART.md  Dockerfile  ETL_PROCESS.md  FUTURE_OPTIMIZATIONS.md  MIGRATION_QUICKSTART.md  PHASE2_COMPLETION.md  PHASE_0_SUMMARY.md  README.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  REPOSITORY_PATTERN_README.md  RUST_BACKEND_ANALYSIS.md  STREAMLIT_CLEANUP_REPORT.md  UPLOAD_SCHEDULE_SUMMARY.md  build_rust.sh  check_schedule.py  compile_after_migration.sh  debug_json_loading.py  docker-compose.yml  landing.html  new_arch.md  pyproject.toml  pytest.ini  requirements.base.txt  requirements.dev.txt  requirements.txt  run_ci_local.sh  run_dashboard.sh  setup_env.sh  start-rust-backend.sh  (+9 more)
.claude/: settings.json
backend/: .dockerignore  ANALYSIS_AND_OPTIMIZATION.md  Cargo.toml  Dockerfile  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  build.rs  ci.sh  diesel.toml  repository.azure.toml.example  repository.toml  run_tests.sh
backend/benches/: compute_bench.rs
backend/crates/stars-core/: Cargo.toml
backend/crates/stars-core-native/: Cargo.toml  README.md  build.rs
backend/crates/stars-core-native/ffi/: CMakeLists.txt  LICENSE  README.md
backend/crates/stars-core-native/src/: lib.rs
backend/crates/stars-core-sys/: Cargo.toml  build.rs
backend/docs/: schedule.schema.json
backend/examples/: simple_scheduling.rs
backend/native/ffi/: CMakeLists.txt  stars_ffi.pc.in
backend/src/: api.rs  api_tests.rs  compute.rs  error.rs  lib.rs  main.rs  routes_tests.rs  state.rs  testing.rs  validation.rs
backend/src/analytics/: conflicts.rs  correlations.rs  distributions.rs  metrics.rs  mod.rs  top_observations.rs
backend/src/db/: checksum.rs  factory.rs  mod.rs  models.rs  repo_config.rs  services.rs  services_tests.rs
backend/src/http/: dto.rs  error.rs  extensions.rs  handlers.rs  mod.rs  router.rs  state.rs
backend/src/loaders/: csv.rs  csv_refactored.rs  json.rs  mod.rs  parser.rs
backend/src/models/: api.rs  astro_adapter.rs  macros.rs  mod.rs  schedule.rs  time.rs  time_tests.rs
backend/src/preprocessing/: mod.rs  schedule.rs
backend/src/routes/: algorithm_trace.rs  altaz.rs  analytics.rs  compare.rs  comparison.rs  datasets.rs  distribution.rs  fragmentation.rs  health.rs  helpers.rs  insights.rs  landing.rs  mod.rs  skymap.rs  timeline.rs  trends.rs  validation.rs  visibility.rs  visualizations.rs
backend/src/scheduler/: mod.rs  stars.rs  tests.rs
backend/src/services/: altaz.rs  astronomical_night.rs  compare.rs  compare_tests.rs  distributions.rs  environment_preschedule.rs  environment_structure.rs  fragmentation.rs  import_adapter.rs  insights.rs  insights_tests.rs  job_tracker.rs  mod.rs  schedule_kpis.rs  schedule_processor.rs  sky_map.rs  sky_map_tests.rs  timeline.rs  trends.rs  trends_tests.rs  validation.rs  validation_report.rs  visibility.rs  visibility_computer.rs  visibility_service.rs
backend/src/transformations/: cleaning.rs  filtering.rs
backend/tests/: README.md  api_edge_case_tests.rs  api_types_tests.rs  astronomical_night_integration_tests.rs  comprehensive_test.rs  data_driven_functional_tests.rs  db_error_tests.rs  db_factory_tests.rs  db_module_tests.rs  error_path_tests.rs  golden_test.rs  integration_test.rs  local_repository_expanded_tests.rs  postgres_repository_tests.rs  python_module_tests.rs  real_schedule_with_location_test.rs  repository_integration_tests.rs  routes_functional_tests.rs  routes_integration.rs  routes_uncovered_tests.rs  services_integration.rs  test_pyo3_integration.py  test_validation_integration.rs  visibility_histogram_test.rs
backend/tests/support/: mod.rs
rust_backend/: API_MIGRATION.md  Cargo.toml  QUICKSTART.md  REFACTORING_SUMMARY.md  REPOSITORY_CONFIG.md  diesel.toml  repository.toml
rust_backend/benches/: mjd_benchmark.rs
rust_backend/docs/: schedule.schema.json
rust_backend/qtty/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ci-local.sh
rust_backend/qtty/qtty/: Cargo.toml  README.md
rust_backend/qtty/qtty-core/: Cargo.toml  README.md
rust_backend/qtty/qtty-derive/: Cargo.toml  README.md
rust_backend/qtty/qtty-ffi/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs  cbindgen.toml  units.csv  units.csv.md
rust_backend/src/: api.rs  lib.rs
rust_backend/src/algorithms/: analysis.rs  conflicts.rs  mod.rs  optimization.rs
rust_backend/src/api/: conversions.rs  database_old.rs  mod.rs  registration.rs  streamlit.rs  types.rs  utils.rs
rust_backend/src/core/: domain.rs  mod.rs
rust_backend/src/db/: analytics.rs  checksum.rs  config.rs  factory.rs  mod.rs  models.rs  operations.rs  pool.rs  repo_config.rs  repository.rs  repository_manager.rs  services.rs  validation.rs
rust_backend/src/io/: loaders.rs  loaders_tests.rs  mod.rs
rust_backend/src/models/: constraints.rs  macros.rs  mod.rs  schedule.rs  scheduling_block.rs  time.rs
rust_backend/src/parsing/: csv_parser.rs  csv_parser_tests.rs  dark_periods_parser.rs  dark_periods_parser_tests.rs  json_parser.rs  json_parser_tests.rs  mod.rs  visibility.rs
rust_backend/src/preprocessing/: enricher.rs  mod.rs  pipeline.rs  validator.rs
rust_backend/src/python/: algorithms.rs  database.rs  loaders.rs  mod.rs  preprocessing.rs  time_bindings.rs  transformations.rs
rust_backend/src/routes/: compare.rs  conversions.rs  distribution.rs  insights.rs  landing.rs  mod.rs  skymap.rs  timeline.rs  trends.rs  validation.rs  visibility.rs
rust_backend/src/services/: compare.rs  distributions.rs  insights.rs  mod.rs  sky_map.rs  timeline.rs  trends.rs  validation.rs  validation_report.rs  visibility.rs
rust_backend/src/siderust/: astro.rs  mod.rs
rust_backend/src/time/: mjd.rs  mod.rs
rust_backend/src/transformations/: cleaning.rs  filtering.rs  mod.rs
rust_backend/tests/: README.md  postgres_repository_tests.rs  repository_integration_tests.rs  test_integration.py  test_validation_integration.rs  visibility_histogram_test.rs
(+792 files in other folders)
