[workspace]
members = ["rust_backend"]
default-members = ["rust_backend"]
exclude = ["rust_backend/qtty/qtty", "rust_backend/qtty/qtty-core"]
resolver = "2"

[patch.crates-io]
# Use local qtty crates to avoid duplicate versions from crates.io
qtty-core = { path = "rust_backend/qtty/qtty-core" }
qtty = { path = "rust_backend/qtty/qtty" }

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/yourorg/yourrepo"
keywords = ["astronomy", "quantities", "science"]
categories = ["science", "aerospace"]
