[project]
name = "telescope-scheduling-intelligence"
version = "0.1.0"
description = "Production-grade Streamlit application for telescope scheduling analysis"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "scipy>=1.11.0",
    "tabulate>=0.9.0",
    "pytest-cov>=4.1.0",
    "responses>=0.25.0",
    "hypothesis>=6.98.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.0",
    "responses>=0.25.0",
    "ruff>=0.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "pandas-stubs>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel", "maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "tsi_rust"
manifest-path = "rust_backend/Cargo.toml"
bindings = "pyo3"
compatibility = "linux"
features = ["pyo3/extension-module"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "N803",  # Argument name should be lowercase (allow X, y for ML convention)
    "N806",  # Variable in function should be lowercase (allow X, y for ML convention)
    "N815",  # Variable in class scope should not be mixedCase (allow camelCase for JSON field names)
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

