[workspace]
members = [".", "crates/stars-core-sys", "crates/stars-core", "crates/stars-core-native"]
resolver = "2"

[package]
name = "tsi-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "tsi_rust"
crate-type = ["cdylib", "rlib"]  # rlib needed for benchmarks and tests

[features]
default = ["local-repo"]
# Production backend using PostgreSQL with Diesel ORM
postgres-repo = ["dep:diesel", "dep:diesel_migrations"]
# In-memory backend for testing and development
local-repo = []
# Enable STARS Core scheduling library integration
stars-core = ["dep:stars-core"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
log = "0.4"
toml = "0.8"
qtty = { version = "0.2.2", features = ["serde", "pyo3", "diesel"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "serde_json", "numeric"], optional = true }
diesel_migrations = { version = "2.1", optional = true }
stars-core = { path = "crates/stars-core", optional = true }
