[package]
name = "tsi-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "tsi_rust"
crate-type = ["rlib"]  # Only rlib needed for HTTP server

[[bin]]
name = "tsi-server"
path = "src/bin/server.rs"
required-features = ["http-server"]

[features]
default = ["local-repo", "http-server"]
# Production backend using PostgreSQL with Diesel ORM
postgres-repo = ["dep:diesel", "dep:diesel_migrations"]
# In-memory backend for testing and development
local-repo = []
# HTTP server feature (axum-based REST API)
http-server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:uuid", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
log = "0.4"
toml = "0.8"
qtty = { version = "0.2.2", features = ["serde", "diesel"] }
siderust = { path = "siderust" }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "serde_json", "numeric"], optional = true }
diesel_migrations = { version = "2.1", optional = true }

# HTTP server dependencies (axum)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"], optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# SSE and async streaming for job logs
async-stream = "0.3"
futures = "0.3"
parking_lot = "0.12"
