[package]
name = "tsi-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "tsi_rust"
crate-type = ["cdylib", "rlib"]  # rlib needed for benchmarks and tests

[dependencies]
# Using pyo3 0.25 to match pyo3-polars 0.24 compatibility
# pyo3-polars 0.25 requires polars 0.52 which has critical compilation bugs
pyo3 = { version = "0.25", features = ["abi3-py310"] }
pyo3-polars = "0.24"
polars = { version = "0.51.0", features = ["lazy", "temporal", "json"] }
chrono = { version = "0.4", features = ["serde"] }
siderust = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
sha2 = "0.10"
hex = "0.4"
bb8 = "0.8"
bb8-tiberius = "0.15"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
