[package]
name = "tsi-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "tsi_rust"
crate-type = ["cdylib", "rlib"]  # rlib needed for benchmarks and tests

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
sha2 = "0.10"
hex = "0.4"
bb8 = "0.8"
bb8-tiberius = "0.15"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
toml = "0.8"
qtty = { path = "qtty/qtty", features = ["serde", "python"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"

