[package]
name = "tsi-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "tsi_rust"
crate-type = ["cdylib", "rlib"]  # rlib needed for benchmarks and tests

[features]
default = ["local-repo"]
# Production backend using PostgreSQL with Diesel ORM
postgres-repo = ["dep:diesel", "dep:diesel_migrations"]
# Azure SQL Server backend (legacy)
azure-repo = ["dep:tiberius", "dep:bb8", "dep:bb8-tiberius", "dep:reqwest", "dep:tokio-util", "qtty/tiberius"]
# In-memory backend for testing and development
local-repo = []

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1.19"
log = "0.4"
toml = "0.8"
qtty = { path = "qtty/qtty", features = ["serde", "python"] }
bb8 = { version = "0.8", optional = true }
bb8-tiberius = { version = "0.15", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "serde_json", "numeric"], optional = true }
diesel_migrations = { version = "2.1", optional = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
