[package]
name = "stars-core-native"
version = "0.1.0"
edition = "2021"
description = "Wrapper crate to locate/build the STARS Core native C++ sources from the workspace"
license = "MIT"

[package.metadata]
# This crate is a build-time helper; no Rust sources required.

[build-dependencies]
cmake = "0.1"

[features]
default = []
