[package]
name = "stars-core-sys"
version = "0.1.0"
edition = "2021"
description = "Low-level FFI bindings to STARS Core scheduling library"
license = "MIT"
links = "stars_ffi"
build = "build.rs"

[dependencies]

[build-dependencies]
cc = "1.0"
cmake = "0.1"
pkg-config = "0.3"

[features]
default = []
# Build the C++ shim from source
build-native = []
# Use system-installed libraries
system-libs = []
