[package]
name = "stars-core"
version = "0.1.0"
edition = "2021"
description = "Safe Rust bindings to STARS Core scheduling library"
license = "MIT"

[dependencies]
stars-core-sys = { path = "../stars-core-sys" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []

# Build the native C++ library from the bundled sources.
build-native = ["stars-core-sys/build-native"]

# Link against system-installed STARS Core component libraries (advanced).
system-libs = ["stars-core-sys/system-libs"]

[dev-dependencies]
tempfile = "3.0"
